Updated chart, effects pages. + bug fix
Charts page now shows total characters left and reset time in Elevenlabs subscription.

Both Charts page and Effects page have "color-scheme: dark;" to ensure dark scrollbars are used.

Removed some Randomness options.

Added the handler for getting Elevenlabs character data.

Fixed data route not being checked for Mongo being enabled.

--- a/static/effects.css
+++ b/static/effects.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&display=swap');
 
+html {
+    color-scheme: dark;
+}
+
 body {
     background-color: #212121;
     color: #fff;
